--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -10,13 +10,27 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run tests
-        run: pytest -v
+          pip install pytest-cov
+
+      # 1) Jalankan tests + coverage (ringkasan terlihat di log)
+      - name: Tests + Coverage (console + HTML)
+        run: |
+          pytest --cov=. --cov-report=term-missing --cov-report=html -v
+
+      # 2) Upload folder htmlcov sebagai artifact (bisa diunduh dari halaman Actions)
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: htmlcov
+          path: htmlcov
+          retention-days: 7
